/*******************************************************************************
 * This file is part of OpenNMS(R).
 *
 * Copyright (C) 2022 The OpenNMS Group, Inc.
 * OpenNMS(R) is Copyright (C) 1999-2022 The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * OpenNMS(R) is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with OpenNMS(R).  If not, see:
 *      http://www.gnu.org/licenses/
 *
 * For more information contact:
 *     OpenNMS(R) Licensing <license@opennms.org>
 *     http://www.opennms.org/
 *     http://www.opennms.com/
 *******************************************************************************/

package org.opennms.horizon.server.mapper;

import com.google.protobuf.Int64Value;
import org.mapstruct.CollectionMappingStrategy;
import org.mapstruct.Mapper;
import org.mapstruct.Mapping;
import org.mapstruct.NullValueCheckStrategy;
import org.opennms.horizon.inventory.dto.TagCreateDTO;
import org.opennms.horizon.inventory.dto.TagCreateListDTO;
import org.opennms.horizon.inventory.dto.TagDTO;
import org.opennms.horizon.inventory.dto.TagEntityIdDTO;
import org.opennms.horizon.inventory.dto.TagRemoveListDTO;
import org.opennms.horizon.server.model.inventory.tag.Tag;
import org.opennms.horizon.server.model.inventory.tag.TagCreate;
import org.opennms.horizon.server.model.inventory.tag.TagListMonitorPolicyAdd;
import org.opennms.horizon.server.model.inventory.tag.TagListNodesAdd;
import org.opennms.horizon.server.model.inventory.tag.TagListNodesRemove;


@Mapper(componentModel = "spring", uses = {},
    // Needed for grpc proto mapping
    collectionMappingStrategy = CollectionMappingStrategy.ADDER_PREFERRED)
public interface TagMapper {
    Tag protoToTag(TagDTO tagDTO);

    default TagCreateListDTO tagListAddToProtoCustom(TagListNodesAdd tags) {
        TagCreateListDTO.Builder builder = tagListAddToProto(tags).toBuilder();
        builder.addAllEntityIds(tags.getNodeIds().stream()
            .map(value -> TagEntityIdDTO.newBuilder()
                .setNodeId(value).build())
            .toList());
        return builder.build();
    }

    default TagCreateListDTO tagListAddToProtoCustom(TagListMonitorPolicyAdd tags) {
        TagCreateListDTO.Builder builder = tagListAddToProto(tags).toBuilder();
        builder.addEntityIds(TagEntityIdDTO.newBuilder().setMonitoringPolicyId(tags.getMonitorPolicyId()).build());
        return builder.build();
    }

    default TagRemoveListDTO tagListRemoveToProtoCustom(TagListNodesRemove tags) {
        TagRemoveListDTO.Builder builder = tagListRemoveToProto(tags).toBuilder();
        builder.addAllEntityIds(tags.getNodeIds().stream()
            .map(value -> TagEntityIdDTO.newBuilder()
                .setNodeId(value).build())
            .toList());
        return builder.build();
    }

    @Mapping(target = "tagsList", source = "tags", nullValueCheckStrategy = NullValueCheckStrategy.ALWAYS)
    TagCreateListDTO tagListAddToProto(TagListNodesAdd tags);

    @Mapping(target = "tagIdsList", source = "tagIds", nullValueCheckStrategy = NullValueCheckStrategy.ALWAYS)
    TagRemoveListDTO tagListRemoveToProto(TagListNodesRemove tags);

    @Mapping(target = "tagsList", source = "tags", nullValueCheckStrategy = NullValueCheckStrategy.ALWAYS)
    TagCreateListDTO tagListAddToProto(TagListMonitorPolicyAdd tags);


    TagCreateDTO tagCreateToProto(TagCreate tagCreate);

    default Int64Value longToInt64Value(Long value) {
        return Int64Value.of(value);
    }
}
